# patternlabs

./: bill1.py  customer1.py  main.py  operator1.py
lab2pattern/: input.json  main.py  models.py  output.json  port.py  ship.py
lab3pattern/: abstract_factory.py  courses.py  factory.py  groups.py  main.py  sessions.py  teachers.py  test_integration.py  test_unit.py
lab4pattern/: README.md  datatypes.py  factory.py  main.py  mydb.json  query.py  table.py  tests.py
lab5pattern/: README.md  main.py  requirements.txt
lab6pattern/: .env  (+4 more)
lab7pattern/: README.md  pyproject.toml
lab7pattern/drones/api/: endpoints.py  server.py
lab7pattern/drones/bridge/: air.py  base.py  controller.py  sea.py  surface.py
lab7pattern/drones/config/: mission_config.py
lab7pattern/drones/cor/: adjust_altitude_handler.py  base.py  emergency_land_handler.py  reroute_handler.py  swarm_reassign_handler.py
lab7pattern/drones/environment/: air_env.py  base.py  sea_env.py  surface_env.py
lab7pattern/drones/factory/: config_loader.py  mission_factory.py
lab7pattern/drones/missions/: agriculture.py  defects_detection.py  pollution_monitoring.py  rescue.py  sea_exploration.py
lab7pattern/drones/observer/: event_bus.py  events.py
lab7pattern/drones/strategy/: base.py  crack_reaction.py  wave_reaction.py  wind_reaction.py
lab7pattern/drones/template/: base.py
lab7pattern/drones/utils/: math_utils.py  persistence.py  telemetry.py
lab7pattern/tests/integration/: test_mission_end_to_end.py
lab7pattern/tests/unit/: test_bridge.py  test_cor.py  test_strategy.py  test_templane.py
(+28 files in other folders)
